# Trading-Agent

./: .gitignore  README.md  pyproject.toml
examples/: webhook_buy.json  webhook_sell.json
src/trading_agent/api/: main.py
src/trading_agent/backtesting/: replay.py
src/trading_agent/config/: settings.py
src/trading_agent/db/: database.py
src/trading_agent/models/: entities.py
src/trading_agent/schemas/: alert.py  pipeline.py
src/trading_agent/services/: decision_engine.py  execution_engine.py  persistence.py  validation_engine.py
tests/: test_decision_engine.py  test_validation_engine.py
